# motion_detection

./: CMakeLists.txt  README.md  package.xml
common/include/motion_detection/: background_subtractor.h  egomotion_compensator.h  expected_flow_calculator.h  flow_clusterer.h  flow_difference_calculator.h  flow_neighbour_similarity_calculator.h  motion_logger.h  optical_flow_calculator.h  optical_flow_visualizer.h  outlier_detector.h  point_cluster.h  trajectory_visualizer.h  vector_cluster.h
common/src/: K matrix  VarFlow.cpp  background_subtractor.cpp  egomotion_compensator.cpp  expected_flow_calculator.cpp  flow_clusterer.cpp  flow_difference_calculator.cpp  flow_neighbour_similarity_calculator.cpp  motion_logger.cpp  optical_flow_calculator.cpp  optical_flow_visualizer.cpp  outlier_detector.cpp  point_cluster.cpp  slic.cpp  trajectory_visualizer.cpp  vector_cluster.cpp
ros/include/motion_detection/: motion_detection_node.h
ros/launch/: bag.launch  camera.launch  image_seq.launch  motion_detection.launch  motion_detection_tu.launch  towercam.launch  video.launch
ros/src/: motion_detection_node.cpp  motion_detection_node_old.cpp
